--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 </button>
             </div>
 
-            <div class="valv-button-row">
+            <div class="calc-button-row">
                 <button class="calc-button">
                     1
                 </button>
